Reworked Demon Slayer Uniform