@@ -19,7 +19,7 @@ import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.Minecraft;
 
-import net.mcreator.craftnoyaiba.client.model.Modelslayer_uniform;
+import net.mcreator.craftnoyaiba.client.model.Modeluniformv3;
 
 import java.util.function.Consumer;
 import java.util.Map;
@@ -81,9 +81,9 @@ public abstract class DemonSlayerUniformItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelslayer_uniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modelslayer_uniform.LAYER_LOCATION)).Body, "left_arm",
-							new Modelslayer_uniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modelslayer_uniform.LAYER_LOCATION)).LeftArm, "right_arm",
-							new Modelslayer_uniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modelslayer_uniform.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modeluniformv3(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniformv3.LAYER_LOCATION)).Body, "left_arm",
+							new Modeluniformv3(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniformv3.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modeluniformv3(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniformv3.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
@@ -95,7 +95,7 @@ public abstract class DemonSlayerUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craftnoyaiba:textures/entities/dsuniform1.png";
+			return "craftnoyaiba:textures/entities/uniform3.0.png";
 		}
 	}
 
@@ -111,8 +111,8 @@ public abstract class DemonSlayerUniformItem extends ArmorItem {
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getHumanoidArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
 					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("left_leg", new Modelslayer_uniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modelslayer_uniform.LAYER_LOCATION)).Body, "right_leg",
-									new Modelslayer_uniform(Minecraft.getInstance().getEntityModels().bakeLayer(Modelslayer_uniform.LAYER_LOCATION)).Body, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							Map.of("left_leg", new Modeluniformv3(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniformv3.LAYER_LOCATION)).LeftLeg, "right_leg",
+									new Modeluniformv3(Minecraft.getInstance().getEntityModels().bakeLayer(Modeluniformv3.LAYER_LOCATION)).RightLeg, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
 									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "body", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
@@ -125,7 +125,7 @@ public abstract class DemonSlayerUniformItem extends ArmorItem {
 
 		@Override
 		public String getArmorTexture(ItemStack stack, Entity entity, EquipmentSlot slot, String type) {
-			return "craftnoyaiba:textures/entities/dsuniform1.png";
+			return "craftnoyaiba:textures/entities/uniform3.0.png";
 		}
 	}
 }
